--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@ footer {
                         <div class="form-group">
                             <label class="col-md-4 control-label" for="submit"></label>
                             <div class="col-md-4">
-                                <button id="submit" name="submit" class="btn btn-primary">Send Message</button>
+                                <button id="submit" name="submit" class="btn btn-primary" type="submit">Send Message</button>
                             </div>
                         </div>
                     </fieldset>
