--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@ footer {
             </div>
             <div class="col-md-8">
                 <!--Contact form-->
-                <form class="form-horizontal" id="contact_form" method = "POST" action= ""https://script.google.com/macros/s/AKfycbwbTzvavq9B2kafxA-O471bebMcIqXmKQG-98MA/exec" _lpchecked="1">
+                <form class="form-horizontal" id="contact_form" method = "POST" action= "https://script.google.com/macros/s/AKfycbwbTzvavq9B2kafxA-O471bebMcIqXmKQG-98MA/exec" _lpchecked="1">
                     <fieldset>
                         <!-- Text input-->
                         <div class="form-group">
