--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@ footer {
 
 	<section id="home" >	
 		<div class="namebar">
-			<h2> Harsh Upadhyay Testing2</h2>
+			<h2> Harsh Upadhyay</h2>
 		</div>
     <div class="intro-info" style="padding:20px" align="center">
     	<img align="center"  src="download.png" />
