--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@ footer {
     </div>
 	<footer>
 
-		<p class="footerInfo">&copy 2020. All Rights Reserved | Design: <span style="color:#d7e512">Harsh Upadhyay</span></p>
+		<p class="footerInfo">Created with ❤️: <span style="color:#d7e512">Harsh Upadhyay</span></p>
 	</footer>
 
 
